--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <p class="welcome-header__text">If you have a Kokoa Account, log in with your email or phone number.</p>
     </header>
 
-    <form id="login-form">
-        <input type="text" placeholder="Email or phone number">
-        <input type="password" placeholder="Password">
+    <form action="friends.html" method="GET" id="login-form">
+        <input name="username" type="text" placeholder="Email or phone number" required>
+        <input name="password" type="password" placeholder="Password" required>
         <input type="submit" value="Log in">
         <input type="submit" value="Sign Up">
         <a href="#">Find Kokoa Account or Password</a>
