--- a/friends.html
+++ b/friends.html
@@ -1,1 +1,48 @@
-hello this is friends.
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Friend - KokoaTalk</title>
+</head>
+
+<body>
+    <div class="status-bar">
+        <div class="status-bar__coplumn">
+            <span>No Service</span>
+            <i class="fas fa-wifi"></i>
+        </div>
+        <div class="status-bar__coplumn">
+            <span>18:43</span>
+        </div>
+        <div class="status-bar__coplumn">
+            <span>21%</span>
+            <i class="fas fa-battery-quarter  fa-2x"></i>
+            <i class="fas fa-bolt"></i>
+        </div>
+    </div>
+
+    <nav class="nav">
+        <ul class="nav__list">
+            <li class="nav__but">
+                <a class="nav__link" href="friends.html"><i class="fas fa-user fa-lg"></i></a>
+            </li>
+            <li class="nav__but">
+                <a class="nav__link" href="#"><i class="fas fa-comment fa-2x"></i></a>
+            </li>
+            <li class="nav__but">
+                <a class="nav__link" href="#"><i class="fas fa-search fa-2x"></i></a>
+            </li>
+            <li class="nav__but">
+                <a class="nav__link" href="#"><i class="fas fa-ellipsis-h fa-lg"></i></a>
+            </li>
+        </ul>
+    </nav>
+
+    <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
+</body>
+
+</html>
