nav-bar, user-component

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
 <body>
     <div class="status-bar">
-        <div class="status-bar__coplumn">
+        <div class="status-bar__column">
             <span>No Service</span>
             <i class="fas fa-wifi"></i>
         </div>
-        <div class="status-bar__coplumn">
+        <div class="status-bar__column">
             <span>18:43</span>
         </div>
-        <div class="status-bar__coplumn">
+        <div class="status-bar__column">
             <span>21%</span>
             <i class="fas fa-battery-quarter  fa-2x"></i>
             <i class="fas fa-bolt"></i>
