--- a/friends.html
+++ b/friends.html
@@ -11,32 +11,63 @@
 
 <body>
     <div class="status-bar">
-        <div class="status-bar__coplumn">
+        <div class="status-bar__column">
             <span>No Service</span>
             <i class="fas fa-wifi"></i>
         </div>
-        <div class="status-bar__coplumn">
+        <div class="status-bar__column">
             <span>18:43</span>
         </div>
-        <div class="status-bar__coplumn">
+        <div class="status-bar__column">
             <span>21%</span>
             <i class="fas fa-battery-quarter  fa-2x"></i>
             <i class="fas fa-bolt"></i>
         </div>
     </div>
 
+    <header class="screen-header">
+        <h1 class="screen-header__title">Friends</h1>
+        <div class="screen-header__icons">
+          <span><i class="fas fa-search fa-lg"></i></span>
+          <span><i class="fas fa-music fa-lg"></i></span>
+          <span><i class="fas fa-cog fa-lg"></i></span>
+        </div>
+      </header>
+
+    <a href="#" id="friends-display-link">
+        <i class="fas fa-info-circle"></i>  Friends' Names Display
+        <i class="fas fa-chevron-right fa-xs"></i>
+    </a>
+
+    <div class="user-component">
+        <div class="user-component__column">
+            <img
+              src="https://img4.daumcdn.net/thumb/R658x0.q70/?fname=https://t1.daumcdn.net/news/202108/29/entermedia/20210829140348229zmef.jpg"
+              class="user-component__avatar"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title">홍반장</h4>
+              <h6 class="user-component__subtitle">21일 목요일 휴무~</h6>
+            </div>
+          </div>
+          <div class="user-component__column"></div>
+    </div>
+
     <nav class="nav">
         <ul class="nav__list">
-            <li class="nav__but">
+            <li class="nav__btn">
                 <a class="nav__link" href="friends.html"><i class="fas fa-user fa-lg"></i></a>
             </li>
-            <li class="nav__but">
-                <a class="nav__link" href="#"><i class="fas fa-comment fa-2x"></i></a>
+            <li class="nav__btn">
+                <a class="nav__link" href="#">
+                    <span class="nav__notification">1</span>
+                    <i class="fas fa-comment fa-2x">
+                </i></a>
             </li>
-            <li class="nav__but">
+            <li class="nav__btn">
                 <a class="nav__link" href="#"><i class="fas fa-search fa-2x"></i></a>
             </li>
-            <li class="nav__but">
+            <li class="nav__btn">
                 <a class="nav__link" href="#"><i class="fas fa-ellipsis-h fa-lg"></i></a>
             </li>
         </ul>
