--- a/friends.html
+++ b/friends.html
@@ -39,19 +39,42 @@
         <i class="fas fa-chevron-right fa-xs"></i>
     </a>
 
+    <main class="friends-screen">
     <div class="user-component">
         <div class="user-component__column">
             <img
               src="https://img4.daumcdn.net/thumb/R658x0.q70/?fname=https://t1.daumcdn.net/news/202108/29/entermedia/20210829140348229zmef.jpg"
-              class="user-component__avatar"
+              class="user-component__avatar user-component__avatar--xl"
             />
             <div class="user-component__text">
               <h4 class="user-component__title">홍반장</h4>
-              <h6 class="user-component__subtitle">21일 목요일 휴무~</h6>
+              <!-- <h6 class="user-component__subtitle">21일 목요일 휴무~</h6> -->
             </div>
           </div>
           <div class="user-component__column"></div>
     </div>
+    <div class="friend-screen__channel">
+        <div class="friends-screen__channel-header">
+            <span>Channel</span>
+            <i class="fas fa-chevron-up fa-xs"></i>
+        </div>
+        <div class="user-component">
+            <div class="user-component__column">
+              <img
+                src="https://img4.daumcdn.net/thumb/R658x0.q70/?fname=https://t1.daumcdn.net/news/202108/29/entermedia/20210829140348229zmef.jpg"
+                class="user-component__avatar user-component__avatar--sm"
+              />
+              <div class="user-component__text">
+                <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
+              </div>
+            </div>
+            <div class="user-component__column">
+              <span>2</span>
+              <i class="fas fa-chevron-right fa-xs"></i>
+            </div>
+          </div>
+    </div>
+    </main> 
 
     <nav class="nav">
         <ul class="nav__list">
