--- a/chats.html
+++ b/chats.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Friend - KokoaTalk</title>
+    <title>Chats - KokoaTalk</title>
 </head>
 
 <body>
@@ -26,66 +26,43 @@
     </div>
 
     <header class="screen-header">
-        <h1 class="screen-header__title">Friends</h1>
+        <h1 class="screen-header__title">Chats</h1>
         <div class="screen-header__icons">
           <span><i class="fas fa-search fa-lg"></i></span>
+          <span><i class="far fa-comment-dots fa-lg"></i></span>
           <span><i class="fas fa-music fa-lg"></i></span>
           <span><i class="fas fa-cog fa-lg"></i></span>
         </div>
       </header>
 
-    <a href="#" id="friends-display-link">
-        <i class="fas fa-info-circle"></i>  Friends' Names Display
-        <i class="fas fa-chevron-right fa-xs"></i>
-    </a>
-
-    <main class="friends-screen">
+    <main class="main-screen">
     <div class="user-component">
         <div class="user-component__column">
             <img
               src="https://img4.daumcdn.net/thumb/R658x0.q70/?fname=https://t1.daumcdn.net/news/202108/29/entermedia/20210829140348229zmef.jpg"
-              class="user-component__avatar user-component__avatar--xl"
+              class="user-component__avatar user-component__avatar--sm"
             />
             <div class="user-component__text">
               <h4 class="user-component__title">홍반장</h4>
-              <!-- <h6 class="user-component__subtitle">21일 목요일 휴무~</h6> -->
+              <h6 class="user-component__subtitle">21일 목요일 휴무~</h6>
             </div>
           </div>
-          <div class="user-component__column"></div>
+          <div class="user-component__column">
+            <span class="user-component__time">21:22</span>
+            <div class="bedge">1</div>
+          </div>
     </div>
-    <div class="friend-screen__channel">
-        <div class="friends-screen__channel-header">
-            <span>Channel</span>
-            <i class="fas fa-chevron-up fa-xs"></i>
-        </div>
-        <div class="user-component">
-            <div class="user-component__column">
-              <img
-                src="https://img4.daumcdn.net/thumb/R658x0.q70/?fname=https://t1.daumcdn.net/news/202108/29/entermedia/20210829140348229zmef.jpg"
-                class="user-component__avatar user-component__avatar--sm"
-              />
-              <div class="user-component__text">
-                <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
-              </div>
-            </div>
-            <div class="user-component__column">
-            <div>
-              <span>2</span>
-              <i class="fas fa-chevron-right fa-xs"></i>
-            </div>
-          </div>
-        </div>
-      </div>
+  
     </main> 
 
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn">
-                <a class="nav__link" href="friends.html"><i class="fas fa-user fa-lg"></i></a>
+                <a class="nav__link" href="friends.html"><i class="far fa-user fa-2x"></i></a>
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="chats.html">
-                    <span class="nav__notification bedge ">1</span>
+                    <span class="nav__notification bedge">1</span>
                     <i class="fas fa-comment fa-2x">
                 </i></a>
             </li>
@@ -93,6 +70,7 @@
                 <a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a>
             </li>
             <li class="nav__btn">
+              <span class="nav__notification"></span>
                 <a class="nav__link" href="more.html"><i class="fas fa-ellipsis-h fa-lg"></i></a>
             </li>
         </ul>
