--- a/friends.html
+++ b/friends.html
@@ -81,12 +81,12 @@
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn">
-                <a class="nav__link" href="friends.html"><i class="fas fa-user fa-lg"></i></a>
+                <a class="nav__link" href="friends.html"><i class="fas fa-user fa-2x"></i></a>
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="chats.html">
                     <span class="nav__notification bedge ">1</span>
-                    <i class="fas fa-comment fa-2x">
+                    <i class="far fa-comment fa-2x">
                 </i></a>
             </li>
             <li class="nav__btn">
