--- a/settings.html
+++ b/settings.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chats - KokoaTalk</title>
+    <title>Settings - KokoaTalk</title>
 </head>
 
 <body>
@@ -25,36 +25,41 @@
         </div>
     </div>
 
-    <header class="screen-header">
-        <h1 class="screen-header__title">Chats</h1>
-        <div class="screen-header__icons">
-          <span><i class="fas fa-search fa-lg"></i></span>
-          <span><i class="far fa-comment-dots fa-lg"></i></span>
-          <span><i class="fas fa-music fa-lg"></i></span>
-          <span><i class="fas fa-cog fa-lg"></i></span>
-        </div>
-      </header>
+    <header class="alt-header">
+      <div class="alt-header__column">
+        <a href="more.html">
+        <i class="fas fa-angle-left fa-2x"></i></a>
+      </div>
+      <div class="alt-header__column">
+        <h1 class="alt-header__title">Settings</h1>
+      </div>
+      <div class="alt-header__column">
+        <span><i class="fas fa-search fa-lg"></i></span>
+      </div>
+    </header>
 
     <main class="main-screen">
-        <a href="chat.html">
-            <div class="user-component">
-        <div class="user-component__column">
-            <img
-              src="https://img4.daumcdn.net/thumb/R658x0.q70/?fname=https://t1.daumcdn.net/news/202108/29/entermedia/20210829140348229zmef.jpg"
-              class="user-component__avatar user-component__avatar--sm"
-            />
-            <div class="user-component__text">
-              <h4 class="user-component__title">홍반장</h4>
-              <h6 class="user-component__subtitle">21일 목요일 휴무~</h6>
-            </div>
+      <ul class="setting-list">
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fas fa-bullhorn"></i>
+          <span>Notices</span>
           </div>
-          <div class="user-component__column">
-            <span class="user-component__time">21:22</span>
-            <div class="bedge">1</div>
+        </li>
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fas fa-flask"></i>
+          <span>Kokoa Lab</span>
           </div>
-            </div>
-        </a>
-  
+        </li>
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fas fa-info-circle"></i>
+          <span>Version</span>
+          </div>
+          <div class="settings__setting-column">Latest Version</div>
+        </li>
+      </ul>
     </main> 
 
     <nav class="nav">
@@ -65,7 +70,7 @@
             <li class="nav__btn">
                 <a class="nav__link" href="chats.html">
                     <span class="nav__notification bedge">1</span>
-                    <i class="fas fa-comment fa-2x">
+                    <i class="far fa-comment fa-2x">
                 </i></a>
             </li>
             <li class="nav__btn">
