--- a/chats.html
+++ b/chats.html
@@ -40,16 +40,16 @@
             <div class="user-component">
         <div class="user-component__column">
             <img
-              src="https://img4.daumcdn.net/thumb/R658x0.q70/?fname=https://t1.daumcdn.net/news/202108/29/entermedia/20210829140348229zmef.jpg"
+              src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMTEwMDRfMjM3%2FMDAxNjMzMzE0Mzg2NDk3.XvD4hdI_2xRY2DJH1ePmSzFlGDQH5FA2loW6s9zF4rwg.npteyzd71BU0laHIhOyj0yfasVzQXMCXPTk-l48VeeUg.PNG.framegust%2Fimage.png&type=sc960_832"
               class="user-component__avatar user-component__avatar--sm"
             />
             <div class="user-component__text">
-              <h4 class="user-component__title">홍반장</h4>
-              <h6 class="user-component__subtitle">21일 목요일 휴무~</h6>
+              <h4 class="user-component__title">치과 ❤️</h4>
+              <h6 class="user-component__subtitle">너무 좋아! 한시간이나 남았네ㅜㅜ</h6>
             </div>
           </div>
           <div class="user-component__column">
-            <span class="user-component__time">21:22</span>
+            <span class="user-component__time">17:02</span>
             <div class="bedge">1</div>
           </div>
             </div>
