--- a/friends.html
+++ b/friends.html
@@ -61,11 +61,11 @@
         <div class="user-component">
             <div class="user-component__column">
               <img
-                src="https://img4.daumcdn.net/thumb/R658x0.q70/?fname=https://t1.daumcdn.net/news/202108/29/entermedia/20210829140348229zmef.jpg"
+              src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMTEwMDRfMjM3%2FMDAxNjMzMzE0Mzg2NDk3.XvD4hdI_2xRY2DJH1ePmSzFlGDQH5FA2loW6s9zF4rwg.npteyzd71BU0laHIhOyj0yfasVzQXMCXPTk-l48VeeUg.PNG.framegust%2Fimage.png&type=sc960_832" alt="신민아"
                 class="user-component__avatar user-component__avatar--sm"
               />
               <div class="user-component__text">
-                <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
+                <h4 class="user-component__title user-component__title--not-bold">치과 ❤️</h4>
               </div>
             </div>
             <div class="user-component__column">
@@ -75,6 +75,22 @@
             </div>
           </div>
         </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+            src="https://search.pstatic.net/common?type=f&size=210x236&quality=90&direct=true&src=https%3A%2F%2Fcsearch-phinf.pstatic.net%2F20210825_145%2F1629863803230XEJyt_JPEG%2F60_main_image_new_1629863803173.jpg" alt="신민아"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">감리씨 💙</h4>
+            </div>
+          </div>
+          <div class="user-component__column">
+          <div>
+            <i class="fas fa-chevron-right fa-xs"></i>
+          </div>
+        </div>
+      </div>
       </div>
     </main> 
 
@@ -93,7 +109,8 @@
                 <a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a>
             </li>
             <li class="nav__btn">
-                <a class="nav__link" href="more.html"><i class="fas fa-ellipsis-h fa-lg"></i></a>
+                <a class="nav__link" href="more.html">
+                  <span class="nav__notification bedge-small"></span><i class="fas fa-ellipsis-h fa-lg"></i></a>
             </li>
         </ul>
     </nav>
